--- a/Lecture_3/Assignment_3/group_11_assignment3_2025/group_11_assignment3_2025.ipynb
+++ b/Lecture_3/Assignment_3/group_11_assignment3_2025/group_11_assignment3_2025.ipynb
@@ -642,10 +642,17 @@
   },
   {
    "cell_type": "markdown",
+   "id": "74c46ec8-7f2c-4648-8b02-2143df91cb34",
+   "metadata": {},
+   "source": [
+    "## Part 2: Functions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "47db1578",
    "metadata": {},
    "source": [
-    "Part 2: Functions\n",
     "6. Function with Multiple Returns\n",
     "Write a function analyze_numbers(lst) that takes a list of numbers and returns:\n",
     "\n",
@@ -803,6 +810,184 @@
    "metadata": {},
    "source": [
     "If you pass strings to this function, Python will raise a TypeError because the multiplication operator (*) behaves differently for strings and integers. For strings, multiplication is only defined between a string and an integer (e.g., \"hello\" * 3 = \"hellohellohello\"), but not between two strings. Since both parameters are strings in this case, Python doesn't know how to multiply two strings together, resulting in a TypeError.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "589a0fb0-6479-4d59-9fe6-5e287ddc6a33",
+   "metadata": {},
+   "source": [
+    "## Part 3: Classes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c310f77e-b95b-4276-b1c9-2d4d890b4e87",
+   "metadata": {},
+   "source": [
+    "9. Class with Attributes and Methods\n",
+    "Define a class Car with attributes brand, model, and year.\n",
+    "\n",
+    "Add a method display_info() that prints the car’s details.\n",
+    "Re-question: Create two car objects and call the method for each one."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "f7352958-aec5-45de-af01-510a11ef9134",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Creando car objects...\n",
+      "\\Mostrar información de cada auto:\n",
+      "Deralles del auto: Brand: Toyota, Model: Corolla, Year: 2022\n",
+      "Deralles del auto: Brand: Honda, Model: Civic, Year: 2023\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 1. Define the Car class\n",
+    "class Car:\n",
+    "    \"\"\"\n",
+    "    A class to represent a car with brand, model, and year attributes.\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    # The __init__ method is the constructor for the class.\n",
+    "    # It is called whenever a new object of this class is created.\n",
+    "    def __init__(self, brand, model, year):\n",
+    "        \"\"\"\n",
+    "        Initializes the Car object with brand, model, and year.\n",
+    "        \n",
+    "        Args:\n",
+    "            brand (str): The brand of the car (e.g., \"Toyota\").\n",
+    "            model (str): The model of the car (e.g., \"Corolla\").\n",
+    "            year (int): The manufacturing year of the car (e.g., 2022).\n",
+    "        \"\"\"\n",
+    "        self.brand = brand\n",
+    "        self.model = model\n",
+    "        self.year = year\n",
+    "\n",
+    "    # A method to display the car's information.\n",
+    "    def display_info(self):\n",
+    "        \"\"\"\n",
+    "        Prints the details of the car in a formatted string.\n",
+    "        \"\"\"\n",
+    "        print(f\"Deralles del auto: Brand: {self.brand}, Model: {self.model}, Year: {self.year}\")\n",
+    "\n",
+    "\n",
+    "# 2. Create two car objects (instances of the Car class)\n",
+    "print(\"Creando car objects...\")\n",
+    "car1 = Car(\"Toyota\", \"Corolla\", 2022)\n",
+    "car2 = Car(\"Honda\", \"Civic\", 2023)\n",
+    "\n",
+    "# 3. Call the display_info() method for each car object\n",
+    "print(\"\\Mostrar información de cada auto:\")\n",
+    "car1.display_info()\n",
+    "car2.display_info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a007bf81-61a5-444b-9de9-52889dac1ac8",
+   "metadata": {},
+   "source": [
+    "10. Using __init__ and self\n",
+    "\n",
+    "Create a class Student with attributes name, age, and grade.\n",
+    "\n",
+    "Use the __init__ method to initialize these attributes.\n",
+    "Add a method is_passed() that returns \"Passed\" if grade ≥ 11, otherwise \"Failed\".\n",
+    "Re-question: How would you modify the class to add a class attribute school = \"PUCP\" and display it for all students?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "43690f42-66f3-4d81-8f18-cbb6b7fbf560",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Displaying student details:\n",
+      "Student: Ana Torres, Age: 19, Grade: 15, School: PUCP\n",
+      "Student: Luis Gomez, Age: 20, Grade: 10, School: PUCP\n",
+      "\n",
+      "Checking passing status:\n",
+      "- Ana Torres: Passed\n",
+      "- Luis Gomez: Failed\n",
+      "\n",
+      "All students are from: PUCP\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 1. Define the Student class\n",
+    "class Student:\n",
+    "    \"\"\"\n",
+    "    A class to represent a student with name, age, and grade attributes.\n",
+    "    Includes a class attribute for the school name.\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    # Class attribute: This is shared by all instances (objects) of the class.\n",
+    "    school = \"PUCP\"\n",
+    "\n",
+    "    # The __init__ method is the constructor.\n",
+    "    def __init__(self, name, age, grade):\n",
+    "        \"\"\"\n",
+    "        Initializes the Student object with instance-specific attributes.\n",
+    "        \n",
+    "        Args:\n",
+    "            name (str): The student's name.\n",
+    "            age (int): The student's age.\n",
+    "            grade (int): The student's grade.\n",
+    "        \"\"\"\n",
+    "        # Instance attributes: These are unique to each instance.\n",
+    "        self.name = name\n",
+    "        self.age = age\n",
+    "        self.grade = grade\n",
+    "\n",
+    "    def is_passed(self):\n",
+    "        \"\"\"\n",
+    "        Checks if the student's grade is sufficient to pass.\n",
+    "        \n",
+    "        Returns:\n",
+    "            str: \"Passed\" if grade is 11 or higher, otherwise \"Failed\".\n",
+    "        \"\"\"\n",
+    "        if self.grade >= 11:\n",
+    "            return \"Passed\"\n",
+    "        else:\n",
+    "            return \"Failed\"\n",
+    "            \n",
+    "    def display_student_info(self):\n",
+    "        \"\"\"\n",
+    "        Displays the student's full details, including the school name.\n",
+    "        \"\"\"\n",
+    "        # We access the class attribute using self.school or Student.school\n",
+    "        print(f\"Student: {self.name}, Age: {self.age}, Grade: {self.grade}, School: {self.school}\")\n",
+    "\n",
+    "\n",
+    "# Create two student objects\n",
+    "student1 = Student(\"Ana Torres\", 19, 15)\n",
+    "student2 = Student(\"Luis Gomez\", 20, 10)\n",
+    "\n",
+    "# Display the information for each student\n",
+    "print(\"Displaying student details:\")\n",
+    "student1.display_student_info()\n",
+    "student2.display_student_info()\n",
+    "\n",
+    "# Check and print the passing status for each student\n",
+    "print(\"\\nChecking passing status:\")\n",
+    "print(f\"- {student1.name}: {student1.is_passed()}\")\n",
+    "print(f\"- {student2.name}: {student2.is_passed()}\")\n",
+    "\n",
+    "# You can also access the class attribute directly from the class\n",
+    "print(f\"\\nAll students are from: {Student.school}\")"
    ]
   }
  ],
