--- a/Lecture_3/Assignment_3/group_09_assignment3_2025.ipynb
+++ b/Lecture_3/Assignment_3/group_09_assignment3_2025.ipynb
@@ -16,16 +16,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "9e3038c9-19af-4302-84ae-3bc1718adb4e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "3\n",
+      "5\n",
+      "7\n",
+      "9\n"
+     ]
+    }
+   ],
    "source": [
     "#1. Pass Statement Pedro\n",
     "#Write a for loop that iterates through numbers from 1 to 10.\n",
-    "\n",
     "#Use the pass statement when the number is even, and print only the odd numbers.\n",
-    "#Re-question: What would happen if you remove the pass statement?"
+    "\n",
+    "for num in range(1, 11):\n",
+    "    if num % 2 == 0:\n",
+    "        pass      \n",
+    "    else:\n",
+    "        print(num)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "5ffc5748-2ccf-4128-adb1-0e89e9510a8c",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "IndentationError",
+     "evalue": "expected an indented block after 'if' statement on line 3 (4063393090.py, line 4)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[10], line 4\u001b[1;36m\u001b[0m\n\u001b[1;33m    else:\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mIndentationError\u001b[0m\u001b[1;31m:\u001b[0m expected an indented block after 'if' statement on line 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Re-question: What would happen if you remove the pass statement?\n",
+    "for num in range(1, 11):\n",
+    "    if num % 2 == 0:  \n",
+    "    else:\n",
+    "        print(num)\n",
+    "\n",
+    "# Si se remueve el pass, al no haber condición en caso no se cumpla la validación, arroja error"
    ]
   },
   {
@@ -175,16 +216,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "14181fa1-9493-4c4b-95d6-37cee2a9012c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "260\n",
+      "-450\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "can't multiply sequence by non-int of type 'str'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[12], line 14\u001b[0m\n\u001b[0;32m     11\u001b[0m \u001b[38;5;28mprint\u001b[39m(multiply(\u001b[38;5;241m90\u001b[39m, \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m5\u001b[39m))\n\u001b[0;32m     13\u001b[0m \u001b[38;5;66;03m# Test with string\u001b[39;00m\n\u001b[1;32m---> 14\u001b[0m \u001b[38;5;28mprint\u001b[39m(multiply(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mPedro\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mHola\u001b[39m\u001b[38;5;124m\"\u001b[39m))\n",
+      "Cell \u001b[1;32mIn[12], line 5\u001b[0m, in \u001b[0;36mmultiply\u001b[1;34m(a, b)\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21mmultiply\u001b[39m(a: \u001b[38;5;28mint\u001b[39m, b: \u001b[38;5;28mint\u001b[39m) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m \u001b[38;5;28mint\u001b[39m:\n\u001b[1;32m----> 5\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m a \u001b[38;5;241m*\u001b[39m b\n",
+      "\u001b[1;31mTypeError\u001b[0m: can't multiply sequence by non-int of type 'str'"
+     ]
+    }
+   ],
    "source": [
     "#8. Function with Type Hints Pedro\n",
     "#Write a function multiply(a: int, b: int) -> int that returns the product of two integers.\n",
     "\n",
+    "def multiply(a: int, b: int) -> int:\n",
+    "    return a * b\n",
+    "    \n",
     "#Test the function with both integers and strings.\n",
-    "#Re-question: What happens if you pass strings, and why?"
+    "\n",
+    "# Test with integers\n",
+    "print(multiply(10, 26))\n",
+    "print(multiply(90, -5))\n",
+    "\n",
+    "# Test with string\n",
+    "print(multiply(\"Pedro\", \"Hola\"))  \n",
+    "\n",
+    "#Re-question: What happens if you pass strings, and why?\n",
+    "# Sale un error de tipo, debido a que los parámetros que se definieron son enteros, y se está indicando una cadena de texto."
    ]
   },
   {
@@ -263,7 +337,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
