--- a/Lecture_3/Assignment_3/group_07_assignment3_2025/Trabajo_ Group_07_assignment3_2025.ipynb
+++ b/Lecture_3/Assignment_3/group_07_assignment3_2025/Trabajo_ Group_07_assignment3_2025.ipynb
@@ -74,17 +74,10 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Dime un número: 11\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "El resultado es =  9.090909090909092\n"
+      "Has ingresado un valor no válido\n"
      ]
     }
    ],
@@ -106,13 +99,6 @@
    "id": "b08ba394-f488-48c1-bcb7-8268f54411f2",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Dime un número: hola!\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -140,17 +126,10 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Dime un número: 0\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "No se puede dividir entre 0 :(\n"
+      "Has ingresado un valor no válido\n"
      ]
     }
    ],
@@ -176,36 +155,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "942b1dbe-37d8-40fa-9410-7414517b56e4",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Dime un número:  hola grupo 7\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Debes ingresar un número válido, intenta de nuevo.\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Dime un número:  7\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "El resultado es = 14.285714285714286\n"
+      "Debes ingresar un número válido, intenta de nuevo.\n",
+      "El resultado es = 20.0\n"
      ]
     }
    ],
@@ -234,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "0dfae744-85ce-431b-afae-87c0a82d2ef7",
    "metadata": {},
    "outputs": [
@@ -272,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "ca60a945-8619-4de9-bb25-400d56fdbae8",
    "metadata": {},
    "outputs": [
@@ -315,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "0097b43a-a3a6-4245-ac6c-5c1d57b2ea24",
    "metadata": {},
    "outputs": [],
@@ -329,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "899663dd-23d2-4df7-8401-8a667a329532",
    "metadata": {},
    "outputs": [
@@ -339,7 +298,7 @@
        "(8, 40, 20.0)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -359,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "0c01e74c-63a2-4516-85c4-b84f04764ea6",
    "metadata": {},
    "outputs": [
@@ -380,13 +339,128 @@
     "print (\"El valor máximo es\", val_max)\n",
     "print (\"El Promedio es\", mean)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7509fe28",
+   "metadata": {},
+   "source": [
+    "### Pregunta 7 \n",
+    "Function with Default Parameters\n",
+    "\n",
+    "\" Create a function greet(name, message=\"Hello\") that prints a greeting.\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "9558276a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Good morning, Azucena!\n",
+      "Hello, Azucena!\n"
+     ]
+    }
+   ],
+   "source": [
+    "def greet(name, message=\"Hello\"):\n",
+    "    print(f\"{message}, {name}!\")\n",
+    "\n",
+    "# Call the function with and without the message parameter.\n",
+    "greet(\"Azucena\",\"Good morning\")\n",
+    "\n",
+    "# Llamada sin el parámetro 'message'\n",
+    "greet(\"Azucena\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cc9bae2c",
+   "metadata": {},
+   "source": [
+    "*Re-question: How does Python decide which value to use for message when it is not provided?*\n",
+    "Al no brindar a Python un argumento especifico see usa el valor por defecto, en este caso Hello. \n",
+    "Si coloco alguna palabra como \"Good morning\" se sobreescribe en el orden que se estableció previamente. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "35ef0685",
+   "metadata": {},
+   "source": [
+    "### Pregunta 8\n",
+    "Write a function multiply(a: int, b: int) -> int that returns the product of two integers."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "57a073ff",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "7900\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Test the function with both integers and strings.\n",
+    "def multiply(a: int, b: int) -> int:\n",
+    "    return a * b\n",
+    "\n",
+    "#Probamos el resultado de una multiplicación\n",
+    "print(multiply (2,5))\n",
+    "print(multiply (1580,5))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "6100a253",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hellohello\n",
+      "hellohellohellohellohello\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Re-question: What happens if you pass strings, and why?\n",
+    "#Realizamos la prueba\n",
+    "print(multiply (2,\"hello\"))\n",
+    "print(multiply (\"hello\",5))\n",
+    "#print(multiply (\"hi\",\"hi\")) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "50cdc172",
+   "metadata": {},
+   "source": [
+    "Al realizar las pruebas, tenemos 2 casos:\n",
+    "a. Las 2 primeras opciones de multiplicación de un número entero \"n\" veces con \"hello\" termina en resultando en lo siguiente: Si n=2 se repiten \"hellohello\"\n",
+    "\n",
+    "b. En el segundo caso cuando se quiso multiplicar \"hi\" con \"hi\" el codigo nos arroja error porque la operación no esta definida apareciendo \"TypeError\" y para continuar con nuestras operaciones le colocamos el # antes del código."
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:base] *",
+   "display_name": "base",
    "language": "python",
-   "name": "conda-base-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
