#1831 Lizeth Add preg 9-10
Se está cargando preguntas 9 y 10

--- a/Lecture_3/Assignment_3/group_07_assignment3_2025/Trabajo_ Group_07_assignment3_2025.ipynb
+++ b/Lecture_3/Assignment_3/group_07_assignment3_2025/Trabajo_ Group_07_assignment3_2025.ipynb
@@ -74,7 +74,7 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "Dime un número: 11\n"
@@ -107,7 +107,7 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "Dime un número: hola!\n"
@@ -140,7 +140,7 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "Dime un número: 0\n"
@@ -181,7 +181,7 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "Dime un número:  hola grupo 7\n"
@@ -195,7 +195,7 @@
      ]
     },
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "Dime un número:  7\n"
@@ -380,13 +380,168 @@
     "print (\"El valor máximo es\", val_max)\n",
     "print (\"El Promedio es\", mean)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "38586700",
+   "metadata": {},
+   "source": [
+    "## Parte 3\n",
+    "### 9. Clase con atributos y métodos\n",
+    "Define una clase \"Car\"  con los atributos brand, model, y year.\n",
+    "\n",
+    "* Añade un método display_info()que imprima los detalles del vehículo.\n",
+    "* Re-pregunta: Crea dos objetos de automóvil y llama al método para cada uno."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "d6a200dd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Primero creo los atributos y el método \n",
+    "class Car:\n",
+    "    def __init__(self, brand, model, year):\n",
+    "        self.brand = brand\n",
+    "        self.model = model\n",
+    "        self.year = year\n",
+    "        \n",
+    "    def display_info(self):\n",
+    "        #print(f\"{self.brand} {self.model} {self.year} \")   -> 1era forma\n",
+    "        print(\"Esta es la marca:\", self.brand, \".Este es el modelo: \", self.model, \".Ese es el año:\", self.year)  # --> 2da forma: método profe"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "f3ab0d54",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Esta es la marca: Toyota .Este es el modelo:  Corolla .Ese es el año: 2021\n",
+      "Esta es la marca: Ford .Este es el modelo:  Mustang .Ese es el año: 1969\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Creo los objetos car 1 y car2\n",
+    "car1 = Car(\"Toyota\", \"Corolla\", 2021)\n",
+    "car2 = Car(\"Ford\", \"Mustang\", 1969)\n",
+    "\n",
+    "# Luego imprimo los meétodos\n",
+    "car1.display_info() \n",
+    "car2.display_info() "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "988d0b39",
+   "metadata": {},
+   "source": [
+    "### 10. Uso __init__yself\n",
+    "Crea una clase Student con los atributos name, age, y grade.\n",
+    "\n",
+    "* Utilice el __init__método para inicializar estos atributos.\n",
+    "* Agregue un método is_passed()que devuelva \"Passed\"si la calificación es ≥ 11, de lo contrario \"Failed\".\n",
+    "* Re-pregunta: ¿Cómo modificarías la clase para agregar un atributo de clase school = \"PUCP\"y mostrarlo para todos los estudiantes?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "b45ec331",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Creo la clase Student con atributos: name, age, grade\n",
+    "class Student:\n",
+    "    def __init__(self, name, age, grade):\n",
+    "        self.name_student=name\n",
+    "        self.age_student=age\n",
+    "        self.grade_student=grade\n",
+    "        \n",
+    "    def is_passed(self):\n",
+    "        return \"Passed\" if self.grade_student >=11 else \"Failed\"  # Primero para saber si es estudiante pasa o no pasa\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "42ca9856",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Lizeth Passed\n",
+      "Cesar Failed\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Agrego mis objetos con los datos de los estudiantes\n",
+    "s1 = Student(\"Lizeth\", 20, 18.5)\n",
+    "s2 = Student(\"Cesar\", 19, 9.8)\n",
+    "\n",
+    "print(s1.name_student, s1.is_passed())  # Ana Passed\n",
+    "print(s2.name_student, s2.is_passed())  # Luis Failed\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1c5909b7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Repregunta, agrego nuevo atributo school \"PUCP\"\n",
+    "class Student:\n",
+    "    def __init__(self, name, age, grade, school):\n",
+    "        self.name_student=name\n",
+    "        self.age_student=age\n",
+    "        self.grade_student=grade\n",
+    "        self.school_student=school\n",
+    "        \n",
+    "    def is_passed(self):\n",
+    "        return \"Passed\" if self.grade_student >=11 else \"Failed\"  # Primero para saber si es estudiante pasa o no pasa\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0194e5bc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PUCP : Lizeth Passed\n",
+      "PUCP : Cesar Failed\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Agrego mis objetos con los datos de los estudiantes\n",
+    "s1 = Student(\"Lizeth\", 20, 18.5, \"PUCP\")\n",
+    "s2 = Student(\"Cesar\", 19, 9.8, \"PUCP\")\n",
+    "\n",
+    "print( s1.school_student,\":\",  s1.name_student,s1.is_passed())  # PUCP:  Lizeth Passed\n",
+    "print(s1.school_student,\":\", s2.name_student,  s2.is_passed())  # PUCP: Cesar Failed\n"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:base] *",
+   "display_name": "base",
    "language": "python",
-   "name": "conda-base-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -398,7 +553,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
