--- a/Lecture_3/Assignment_3/group_09_assignment3_2025.ipynb
+++ b/Lecture_3/Assignment_3/group_09_assignment3_2025.ipynb
@@ -30,16 +30,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "1e5e57dc-6a42-4a28-b659-34246aa452ab",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "p\n",
+      "y\n",
+      "t\n",
+      "h\n",
+      "n\n",
+      "l\n",
+      "p\n",
+      "s\n"
+     ]
+    }
+   ],
    "source": [
     "#2. Continue Statement Rossana\n",
     "#Create a loop that goes through the string \"pythonloops\".\n",
-    "\n",
     "#Skip the letters \"o\" using the continue statement and print the remaining letters.\n",
-    "#Re-question: How would you achieve the same result without using continue?"
+    "string = \"pythonloops\"\n",
+    "for letter in string:\n",
+    "    if letter == \"o\":\n",
+    "        continue\n",
+    "    print(letter)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "07e1ae59-e35a-405b-bdca-06b686f95316",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "IndentationError",
+     "evalue": "expected an indented block after 'if' statement on line 4 (1018899719.py, line 5)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[27], line 5\u001b[1;36m\u001b[0m\n\u001b[1;33m    print(letter)\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mIndentationError\u001b[0m\u001b[1;31m:\u001b[0m expected an indented block after 'if' statement on line 4\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Re-question: How would you achieve the same result without using continue?\n",
+    "string = \"pythonloops\"\n",
+    "for letter in string:\n",
+    "    if letter == \"o\":\n",
+    "    print(letter)\n",
+    "#it gives an error. \"Continue\" helps keeping in the loop avoiding (or jumping) the \"o\" til it ends. That's why py give us a message error \n",
+    "#thinking that we've made a mistake and we were trying to print just \"o\" instead."
    ]
   },
   {
@@ -72,16 +115,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "0bfc60e3-fc98-453d-bb20-29b9e4654375",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 : 1\n",
+      "2 : 2\n",
+      "3 : 6\n",
+      "4 : 24\n",
+      "5 : 120\n",
+      "Final factorial of 5 = 120\n"
+     ]
+    }
+   ],
    "source": [
     "#5. While Loop Structure Rossana\n",
     "#Write a while loop that calculates the factorial of a given number n.\n",
-    "\n",
     "#Print each intermediate step of the factorial calculation.\n",
-    "#Re-question: How would you implement the same factorial calculation using a for loop instead?"
+    "n = 5\n",
+    "factorial = 1\n",
+    "i = 1\n",
+    "\n",
+    "while i <= n:\n",
+    "    factorial = factorial * i\n",
+    "    print(i, \":\", factorial) \n",
+    "    i = i + 1\n",
+    "\n",
+    "print(\"Final factorial of\", n, \"=\", factorial)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "c28f1b53-4022-4fe4-a9e7-bc4f17c405b2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 : 1\n",
+      "2 : 2\n",
+      "3 : 6\n",
+      "4 : 24\n",
+      "5 : 120\n",
+      "Final factorial of 5 = 120\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Re-question: How would you implement the same factorial calculation using a for loop instead?\n",
+    "n = 5\n",
+    "factorial = 1\n",
+    "\n",
+    "for i in range(1, n+1):\n",
+    "    factorial = factorial * i\n",
+    "    print(i, \":\", factorial) \n",
+    "\n",
+    "print(\"Final factorial of\", n, \"=\", factorial)"
    ]
   },
   {
