--- a/Lecture_3/Assignment_3/group_07_assignment3_2025/Trabajo_ Group_07_assignment3_2025.ipynb
+++ b/Lecture_3/Assignment_3/group_07_assignment3_2025/Trabajo_ Group_07_assignment3_2025.ipynb
@@ -77,14 +77,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Dime un número: 11\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "El resultado es =  9.090909090909092\n"
+      "Has ingresado un valor no válido\n"
      ]
     }
    ],
@@ -106,13 +99,6 @@
    "id": "b08ba394-f488-48c1-bcb7-8268f54411f2",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Dime un número: hola!\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -143,14 +129,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Dime un número: 0\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "No se puede dividir entre 0 :(\n"
+      "Has ingresado un valor no válido\n"
      ]
     }
    ],
@@ -176,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "942b1dbe-37d8-40fa-9410-7414517b56e4",
    "metadata": {},
    "outputs": [
@@ -184,28 +163,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Dime un número:  hola grupo 7\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Debes ingresar un número válido, intenta de nuevo.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Dime un número:  7\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "El resultado es = 14.285714285714286\n"
+      "Debes ingresar un número válido, intenta de nuevo.\n",
+      "El resultado es = 20.0\n"
      ]
     }
    ],
@@ -234,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "0dfae744-85ce-431b-afae-87c0a82d2ef7",
    "metadata": {},
    "outputs": [
@@ -272,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "ca60a945-8619-4de9-bb25-400d56fdbae8",
    "metadata": {},
    "outputs": [
@@ -315,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "0097b43a-a3a6-4245-ac6c-5c1d57b2ea24",
    "metadata": {},
    "outputs": [],
@@ -329,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "899663dd-23d2-4df7-8401-8a667a329532",
    "metadata": {},
    "outputs": [
@@ -339,7 +298,7 @@
        "(8, 40, 20.0)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -359,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "0c01e74c-63a2-4516-85c4-b84f04764ea6",
    "metadata": {},
    "outputs": [
@@ -383,96 +342,210 @@
   },
   {
    "cell_type": "markdown",
-   "id": "38586700",
+   "id": "7509fe28",
    "metadata": {},
    "source": [
-    "## Parte 3\n",
-    "### 9. Clase con atributos y métodos\n",
-    "Define una clase \"Car\"  con los atributos brand, model, y year.\n",
+    "### Pregunta 7 \n",
+    "Function with Default Parameters\n",
     "\n",
-    "* Añade un método display_info()que imprima los detalles del vehículo.\n",
-    "* Re-pregunta: Crea dos objetos de automóvil y llama al método para cada uno."
+    "\" Create a function greet(name, message=\"Hello\") that prints a greeting.\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "d6a200dd",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## Primero creo los atributos y el método \n",
-    "class Car:\n",
-    "    def __init__(self, brand, model, year):\n",
-    "        self.brand = brand\n",
-    "        self.model = model\n",
-    "        self.year = year\n",
-    "        \n",
-    "    def display_info(self):\n",
-    "        #print(f\"{self.brand} {self.model} {self.year} \")   -> 1era forma\n",
-    "        print(\"Esta es la marca:\", self.brand, \".Este es el modelo: \", self.model, \".Ese es el año:\", self.year)  # --> 2da forma: método profe"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "id": "f3ab0d54",
+   "execution_count": 10,
+   "id": "9558276a",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Esta es la marca: Toyota .Este es el modelo:  Corolla .Ese es el año: 2021\n",
-      "Esta es la marca: Ford .Este es el modelo:  Mustang .Ese es el año: 1969\n"
+      "Good morning, Azucena!\n",
+      "Hello, Azucena!\n"
      ]
     }
    ],
    "source": [
-    "# Creo los objetos car 1 y car2\n",
-    "car1 = Car(\"Toyota\", \"Corolla\", 2021)\n",
-    "car2 = Car(\"Ford\", \"Mustang\", 1969)\n",
+    "def greet(name, message=\"Hello\"):\n",
+    "    print(f\"{message}, {name}!\")\n",
     "\n",
-    "# Luego imprimo los meétodos\n",
-    "car1.display_info() \n",
-    "car2.display_info() "
+    "# Call the function with and without the message parameter.\n",
+    "greet(\"Azucena\",\"Good morning\")\n",
+    "\n",
+    "# Llamada sin el parámetro 'message'\n",
+    "greet(\"Azucena\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "988d0b39",
+   "id": "cc9bae2c",
    "metadata": {},
    "source": [
-    "### 10. Uso __init__yself\n",
-    "Crea una clase Student con los atributos name, age, y grade.\n",
+    "*Re-question: How does Python decide which value to use for message when it is not provided?*\n",
+    "Al no brindar a Python un argumento especifico see usa el valor por defecto, en este caso Hello. \n",
+    "Si coloco alguna palabra como \"Good morning\" se sobreescribe en el orden que se estableció previamente. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "35ef0685",
+   "metadata": {},
+   "source": [
+    "### Pregunta 8\n",
+    "Write a function multiply(a: int, b: int) -> int that returns the product of two integers."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "57a073ff",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "7900\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Test the function with both integers and strings.\n",
+    "def multiply(a: int, b: int) -> int:\n",
+    "    return a * b\n",
     "\n",
-    "* Utilice el __init__método para inicializar estos atributos.\n",
+    "#Probamos el resultado de una multiplicación\n",
+    "print(multiply (2,5))\n",
+    "print(multiply (1580,5))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "6100a253",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hellohello\n",
+      "hellohellohellohellohello\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Re-question: What happens if you pass strings, and why?\n",
+    "#Realizamos la prueba\n",
+    "print(multiply (2,\"hello\"))\n",
+    "print(multiply (\"hello\",5))\n",
+    "#print(multiply (\"hi\",\"hi\")) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "50cdc172",
+   "metadata": {},
+   "source": [
+    "Al realizar las pruebas, tenemos 2 casos:\n",
+    "a. Las 2 primeras opciones de multiplicación de un número entero \"n\" veces con \"hello\" termina en resultando en lo siguiente: Si n=2 se repiten \"hellohello\"\n",
+    "\n",
+    "b. En el segundo caso cuando se quiso multiplicar \"hi\" con \"hi\" el codigo nos arroja error porque la operación no esta definida apareciendo \"TypeError\" y para continuar con nuestras operaciones le colocamos el # antes del código."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "62a8274f",
+   "metadata": {},
+   "source": [
+    "## Parte 3: Clases\n",
+    "### 9. Clase con atributos y métodos\n",
+    "Define una clase Carcon los atributos brand, model, y year.\n",
+    "\n",
+    "* Añade un método display_info()que imprima los detalles del vehículo.\n",
+    "* Re-pregunta: Crea dos objetos de automóvil y llama al método para cada uno.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "80701e66",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Creo mis atributos y método para carro\n",
+    "class Car:\n",
+    "    def __init__(self, brand: str, model: str, year: int):\n",
+    "        self.brand = brand\n",
+    "        self.model = model\n",
+    "        self.year = year\n",
+    "\n",
+    "    def display_info(self):\n",
+    "        print(\"Marca:\", self.brand, \",\", \"Modelo:\", self.model, \",\", \"Año:\", self.year)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "adf7873e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Marca: Toyota , Modelo: Corolla , Año: 2021\n",
+      "Marca: Ford , Modelo: Mustang , Año: 1969\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Creo mis objetos\n",
+    "car1 = Car(\"Toyota\", \"Corolla\", 2021)\n",
+    "car2 = Car(\"Ford\", \"Mustang\", 1969)\n",
+    "\n",
+    "car1.display_info()\n",
+    "car2.display_info()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "55ae5fe5",
+   "metadata": {},
+   "source": [
+    "## 10. Uso __init__yself\n",
+    "### Crea una clase Studentcon los atributos name, age, y grade.\n",
+    "\n",
+    "Utilice el __init__método para inicializar estos atributos.\n",
+    "\n",
     "* Agregue un método is_passed()que devuelva \"Passed\"si la calificación es ≥ 11, de lo contrario \"Failed\".\n",
     "* Re-pregunta: ¿Cómo modificarías la clase para agregar un atributo de clase school = \"PUCP\"y mostrarlo para todos los estudiantes?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
-   "id": "b45ec331",
+   "execution_count": 3,
+   "id": "5911495b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Creo la clase Student con atributos: name, age, grade\n",
+    "# Creo la clase student con los atributos: name, age, grade\n",
     "class Student:\n",
     "    def __init__(self, name, age, grade):\n",
-    "        self.name_student=name\n",
-    "        self.age_student=age\n",
-    "        self.grade_student=grade\n",
-    "        \n",
+    "        self.name = name          # asignamos atributos\n",
+    "        self.age = age\n",
+    "        self.grade = grade\n",
+    "\n",
     "    def is_passed(self):\n",
-    "        return \"Passed\" if self.grade_student >=11 else \"Failed\"  # Primero para saber si es estudiante pasa o no pasa\n"
+    "        return \"Passed\" if self.grade >= 11 else \"Failed\"\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
-   "id": "42ca9856",
+   "execution_count": 4,
+   "id": "4a25f8d5",
    "metadata": {},
    "outputs": [
     {
@@ -485,55 +558,55 @@
     }
    ],
    "source": [
-    "# Agrego mis objetos con los datos de los estudiantes\n",
+    "# Objetos\n",
     "s1 = Student(\"Lizeth\", 20, 18.5)\n",
     "s2 = Student(\"Cesar\", 19, 9.8)\n",
     "\n",
-    "print(s1.name_student, s1.is_passed())  # Ana Passed\n",
-    "print(s2.name_student, s2.is_passed())  # Luis Failed\n"
+    "print(s1.name, s1.is_passed())  # Lizeth Passed\n",
+    "print(s2.name, s2.is_passed())  # Cesar Failed\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "1c5909b7",
+   "execution_count": 5,
+   "id": "74a7cd36",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Repregunta, agrego nuevo atributo school \"PUCP\"\n",
+    "# Repregunta  ¿Cómo modificarías la clase para agregar un atributo de clase school = \"PUCP\"y mostrarlo para todos los estudiantes?\n",
     "class Student:\n",
-    "    def __init__(self, name, age, grade, school):\n",
-    "        self.name_student=name\n",
-    "        self.age_student=age\n",
-    "        self.grade_student=grade\n",
-    "        self.school_student=school\n",
-    "        \n",
+    "    school = \"PUCP\"   # atributo de clase compartido\n",
+    "    def __init__(self, name, age, grade): \n",
+    "        self.name = name          # asignamos atributos\n",
+    "        self.age = age\n",
+    "        self.grade = grade\n",
+    "\n",
     "    def is_passed(self):\n",
-    "        return \"Passed\" if self.grade_student >=11 else \"Failed\"  # Primero para saber si es estudiante pasa o no pasa\n"
+    "        return \"Passed\" if self.grade >= 11 else \"Failed\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "0194e5bc",
+   "execution_count": 6,
+   "id": "05380386",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "PUCP : Lizeth Passed\n",
-      "PUCP : Cesar Failed\n"
+      "PUCP Lizeth Passed\n",
+      "PUCP Cesar Failed\n"
      ]
     }
    ],
    "source": [
-    "# Agrego mis objetos con los datos de los estudiantes\n",
-    "s1 = Student(\"Lizeth\", 20, 18.5, \"PUCP\")\n",
-    "s2 = Student(\"Cesar\", 19, 9.8, \"PUCP\")\n",
+    "# Objetos\n",
+    "s1 = Student(\"Lizeth\", 20, 18.5)\n",
+    "s2 = Student(\"Cesar\", 19, 9.8)\n",
     "\n",
-    "print( s1.school_student,\":\",  s1.name_student,s1.is_passed())  # PUCP:  Lizeth Passed\n",
-    "print(s1.school_student,\":\", s2.name_student,  s2.is_passed())  # PUCP: Cesar Failed\n"
+    "print(Student.school, s1.name, s1.is_passed())  # PUCP Lizeth Passed\n",
+    "print(Student.school, s2.name, s2.is_passed())  # PUCP Cesar Passed"
    ]
   }
  ],
