--- a/Lecture_3/Assignment_3/group_07_assignment3_2025/Lizeth_parte3.ipynb
+++ b/Lecture_3/Assignment_3/group_07_assignment3_2025/Lizeth_parte3.ipynb
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "id": "002db540",
    "metadata": {},
    "outputs": [
@@ -147,7 +147,7 @@
     }
    ],
    "source": [
-    "# Objetos\n",
+    "# Objetos: s1 y s2\n",
     "s1 = Student(\"Lizeth\", 20, 18.5)\n",
     "s2 = Student(\"Cesar\", 19, 9.8)\n",
     "\n",
