#1831 Se volvió a subir el trabajo unido
Eliminé y volví a subir el archivo final

--- a/Lecture_3/Assignment_3/group_07_assignment3_2025/Trabajo_ Group_07_assignment3_2025.ipynb
+++ b/Lecture_3/Assignment_3/group_07_assignment3_2025/Trabajo_ Group_07_assignment3_2025.ipynb
@@ -454,11 +454,10 @@
     "\n",
     "b. En el segundo caso cuando se quiso multiplicar \"hi\" con \"hi\" el codigo nos arroja error porque la operación no esta definida apareciendo \"TypeError\" y para continuar con nuestras operaciones le colocamos el # antes del código."
    ]
-<<<<<<< HEAD
   },
   {
    "cell_type": "markdown",
-   "id": "62a8274f",
+   "id": "d2a661c9",
    "metadata": {},
    "source": [
     "## Parte 3: Clases\n",
@@ -466,13 +465,13 @@
     "Define una clase Carcon los atributos brand, model, y year.\n",
     "\n",
     "* Añade un método display_info()que imprima los detalles del vehículo.\n",
-    "* Re-pregunta: Crea dos objetos de automóvil y llama al método para cada uno.\n"
+    "* Re-pregunta: Crea dos objetos de automóvil y llama al método para cada uno."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "80701e66",
+   "id": "3f96edc1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -490,7 +489,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "adf7873e",
+   "id": "a508bcaf",
    "metadata": {},
    "outputs": [
     {
@@ -508,12 +507,13 @@
     "car2 = Car(\"Ford\", \"Mustang\", 1969)\n",
     "\n",
     "car1.display_info()\n",
-    "car2.display_info()\n"
+    "car2.display_info()\n",
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "55ae5fe5",
+   "id": "0932f87d",
    "metadata": {},
    "source": [
     "## 10. Uso __init__yself\n",
@@ -528,7 +528,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "5911495b",
+   "id": "d8d2b8c7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -546,7 +546,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "4a25f8d5",
+   "id": "6a7648ed",
    "metadata": {},
    "outputs": [
     {
@@ -569,12 +569,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "74a7cd36",
+   "execution_count": null,
+   "id": "43c06722",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Repregunta  ¿Cómo modificarías la clase para agregar un atributo de clase school = \"PUCP\"y mostrarlo para todos los estudiantes?\n",
+    "# Repregunta  ¿Cómo modificarías la clase para agregar un atributo de clase school = \"PUCP\"y mostrarlo para todos los estudiantes?.\n",
     "class Student:\n",
     "    school = \"PUCP\"   # atributo de clase compartido\n",
     "    def __init__(self, name, age, grade): \n",
@@ -588,8 +588,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "05380386",
+   "execution_count": 7,
+   "id": "f9d89c41",
    "metadata": {},
    "outputs": [
     {
@@ -609,8 +609,6 @@
     "print(Student.school, s1.name, s1.is_passed())  # PUCP Lizeth Passed\n",
     "print(Student.school, s2.name, s2.is_passed())  # PUCP Cesar Passed"
    ]
-=======
->>>>>>> 94eb097076d1822d347dad0881fed3d6c6089a63
   }
  ],
  "metadata": {
